fix: input overflow

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -32,7 +32,7 @@ button {
 
 input,
 select {
-  @apply focus-visible:ring-brand focus:ring-brand bg-brand/10 ring-border placeholder:text-brand/50;
+  @apply focus-visible:ring-brand focus:ring-brand bg-brand/10 ring-border placeholder:text-brand/50 overflow-hidden rounded-md;
 }
 
 /* Chrome, Safari, Edge, Opera */
